simplified deployment of usecase testbed